config-root/namespaces/jx-production/react-quickstart/react-quickstart-react-quickstart-deploy.yaml
# Source: react-quickstart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-quickstart-react-quickstart
  labels:
    draft: draft-app
    chart: "react-quickstart-0.1.2"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-production
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: react-quickstart-react-quickstart
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: react-quickstart-react-quickstart
    spec:
      serviceAccountName: react-quickstart-react-quickstart
      containers:
        - name: react-quickstart
          image: "10.98.57.81/gilshin/react-quickstart:0.1.2"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
        - name: "tekton-container-registry-auth"
