config-root/namespaces/jx-production/react-quickstart/react-quickstart-svc.yaml
# Source: react-quickstart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-quickstart
  labels:
    chart: "react-quickstart-0.1.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
  namespace: jx-production
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: react-quickstart-react-quickstart
