config-root/namespaces/jx-production/react-quickstart/react-quickstart-ingress.yaml
# Source: react-quickstart/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: react-quickstart
  namespace: jx-production
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: react-quickstart
              servicePort: 80
      host: react-quickstart-jx-production.192.168.99.100.nip.io
